make code blocks have more variable size, fix hr border color issue on chrome, improve the scrollbars on code blocks, make headers have less line height and more margin-bottom

--- a/assets/alignment.css
+++ b/assets/alignment.css
@@ -9,17 +9,20 @@ strong,
 small,
 li,
 blockquote,
-dl,
-.highlighter-rouge {
+dl {
   max-width: 40rem;
   margin: 0 auto;
 }
 
-table, img {
+table, img, .highlighter-rouge {
   margin: 0 auto;
 }
 
+.highlighter-rouge {
+  max-width: 80em;
+}
+
 hr {
-  max-width: 45rem;
+  max-width: 55rem;
   margin: 0.5em auto;
 }
