--- a/assets/markdown-styling.css
+++ b/assets/markdown-styling.css
@@ -26,12 +26,16 @@ blockquote::after {
 .highlighter-rouge {
   background-color: var(--card-color);
   border-radius: 0.5rem;
+  width: min-content;
   padding: 0.1rem;
+}
+
+div.highlight {
+  overflow: auto;
 }
 
 pre.highlight {
   margin: 0.5rem;
-  overflow: auto;
   max-height: 40rem;
 }
 
