--- a/assets/typography.css
+++ b/assets/typography.css
@@ -1,6 +1,13 @@
+p, h1, h2, h3, h4, h5, h6, blockquote, dl, .highlighter-rouge {
+  margin-bottom: 0.5rem;
+}
+
 p, blockquote, dl, .highlighter-rouge {
   line-height: 1.5;
-  margin-bottom: 0.5rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1.1;
 }
 
 h1.main-title {
